<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Amortizer</string>
    <string name="action_settings">Settings</string>
    <string name="instructions">Enter 3 items.\n Leave one blank.\nThen click Calculate button.</string>
    <string name="princlabel">Principal Amount</string>
    <string name="ratelabel">Interest Rate (%)</string>
    <string name="termlabel">Term (months)</string>
    <string name="paymentlabel">Monthly Payment</string>
    <string name="button_calc">Calculate</string>
    <string name="princhint">50000.00</string>
    <string name="ratehint">4.5</string>
    <string name="termhint">120</string>
    <string name="action_help">Help</string>
    <string name="action_about">About</string>
    <string name="result_text">Result: Payment is $500.00</string>
    <string name="clear_button">Clear All</string>
    <string name="describe_the_button">You can edit without clearing all \n(leave one blank to recalculate)</string>
    <string name="show_amort_button">Show Amortization Schedule</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
