<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/gridlayout"
    android:layout_height="wrap_content"
    android:layout_width="match_parent">

    <TextView
        android:id="@+id/resultText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/result_text"
        android:layout_row="0"
        android:layout_column="0"
        android:gravity="fill_horizontal"
        android:layout_gravity="right" />

                        <Space
                            android:layout_width="200dp"
                            android:layout_height="10dp"
                            android:layout_row="1"
                            android:layout_column="0" />

    <Button
        android:id="@+id/button_ClearAll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear_button"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_gravity="right" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/describe_the_button"
        android:layout_row="3"
        android:layout_column="0"
        android:layout_gravity="right"/>
    <Space
        android:layout_width="200dp"
        android:layout_height="20dp"
        android:layout_row="4"
        android:layout_column="0" />

    <Button
        android:id="@+id/button_ShowAmort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_amort_button"
        android:layout_row="5"
        android:layout_column="0"
        android:layout_gravity="right" />


</GridLayout>