<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:id="@+id/container"
    android:layout_width="match_parent" android:layout_height="match_parent"
    tools:context=".MainActivity" tools:ignore="MergeRootFrame" >

    <GridLayout
        android:layout_width="363dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|start|top"
        android:layout_margin="10dp"
        android:id="@+id/gridlayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/instructions"
            android:id="@+id/textView"
            android:layout_row="0"
            android:layout_column="0"
            android:textColor="#111111"
            android:layout_margin="10dp"
            android:layout_columnSpan="4"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal" />

        <Space
            android:layout_width="200dp"
            android:layout_height="20dp"
            android:layout_row="4"
            android:layout_column="0" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/princlabel"
            android:id="@+id/textView2"
            android:layout_row="5"
            android:layout_column="0" />

        <EditText
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/principal"
            android:layout_row="6"
            android:layout_column="0" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_calc"
            android:id="@+id/button_calc"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_columnSpan="4"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ratelabel"
            android:id="@+id/textView3"
            android:layout_row="5"
            android:layout_column="3" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/termlabel"
            android:id="@+id/textView4"
            android:layout_row="8"
            android:layout_column="0" />

        <EditText
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/rate"
            android:layout_row="6"
            android:layout_column="3" />

        <EditText
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/term"
            android:layout_row="9"
            android:layout_column="0" />

        <Space
            android:layout_width="200dp"
            android:layout_height="20dp"
            android:layout_row="7"
            android:layout_column="0" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/paymentlabel"
            android:id="@+id/textView5"
            android:layout_row="8"
            android:layout_column="3" />

        <EditText
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/payment"
            android:layout_row="9"
            android:layout_column="3" />
    </GridLayout>
</FrameLayout>